# myfind

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  lib.c  lib.h  main.c
src/: CMakeLists.txt
